fix logo size error on mobile size screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ h1 {
     /* Game Page */
 
     .game-links {
-        height: 30vw;
+        height: 25vw;
     }
 
     #RPSLS-logo {
